# nesdoug-llvm

./: CMakeLists.txt  README.md
01_Hello/: CMakeLists.txt  hello.c
02_Hello2/: CMakeLists.txt  chr-rom.s  hello2.c
03_Hello3/: CMakeLists.txt  hello3.c
04_FullBG/: CMakeLists.txt  Girl5.chr  chr-rom.s  fullBG.c
04_FullBG/NESIFY/: Girl5.nam  Girl5.pal
05_Fade/: CMakeLists.txt  fade.c
05_Fade/NES_ST/: Girl5.h  Girl5.nss
06_Color/: CMakeLists.txt  blocks.chr  chr-rom.s  color.c
06_Color/NES_ST/: Blocks.nss  blocks.h
07_Sprites/: Alpha2.chr  CMakeLists.txt  Sprites.c  Sprites.h  chr-rom.s  metasprites.c
08_Pads/: Alpha3.chr  CMakeLists.txt  Pads.c  Sprites.c  Sprites.h  chr-rom.s
09_BG_Collide/: CMakeLists.txt  Sprites.c  Sprites.h  chr-rom.s  collide.c  collide.chr
09_BG_Collide/CSV/: c.h  c1.c  c1.csv  c1.tmx  c2.c  c2.csv  c2.tmx  c3.c  c3.csv  c3.tmx  c4.c  c4.csv  c4.tmx
09_BG_Collide/NES_ST/: metatiles.nss
10_Scroll_H/: CMakeLists.txt  Sprites.c  chr-rom.s  scroll_h.c
10_Scroll_H/BG/: N.h  N0.c  N1.c  N2.c
11_Scroll_V/: CMakeLists.txt  big_numbers.chr  scroll_v.c
12_Break/: CMakeLists.txt  Sprites.c  Sprites.h  breaky.c  breaky.chr  chr-rom.s
12_Break/BG/: breaky2.nss  breaky_bg2.c  breaky_bg2.h
12_Break/CSV/: c1.c  c1.h
13_Metatiles/: CMakeLists.txt  chr-rom.s  metatiles.c  metatiles.chr
13_Metatiles/BG/: Room1.c  Room1.csv  Room1.h  Room1.tmx
14_Metatiles2/: CMakeLists.txt  Sprites.c  chr-rom.s  metatiles2.c  metatiles2.chr  metatiles2.h
14_Metatiles2/BG/: Room1.c  Room1.h
15_Scroll_R/: CMakeLists.txt  Sprites.h  chr-rom.s  scroll_r.c  scroll_r.h
15_Scroll_R/BG/: CMakeLists.txt  Room1.c  Room1.csv  Room1.tmx  Room2.c  Room2.csv  Room2.tmx  Room3.c  Room3.csv  Room3.tmx  Room4.c  Room4.csv  Room4.tmx  Room5.c  Room5.csv  Room5.tmx  Rooms.h
15_Scroll_R/NES_ST/: metatiles.nam  metatiles.txt
16_Scroll_Up/: CMakeLists.txt  Sprites.c  chr-rom.s  scroll_up.c
16_Scroll_Up/BG/: Room1.c  Room1.csv  Room1.tmx  Room2.c  Room2.csv  Room2.tmx  Room3.c  Room3.csv  Room3.tmx  Room4.c  Room4.csv  Room4.tmx  Room5.c  Room5.csv  Room5.tmx  Rooms.c  Rooms.h
16_Scroll_Up/NES_ST/: metatiles.nss
17_Platformer/: CMakeLists.txt  Sprites.c  Sprites.h  platformer.c  platformer.h
18_Music/: CMakeLists.txt  platformer2.c
18_Music/MUSIC/: music.s
19_SFX/: CMakeLists.txt  chr-rom.s  platformer3.c
19_SFX/MUSIC/: music.s
20_DPCM/: CMakeLists.txt  platformer4.c
20_DPCM/BG/: Rooms.h
20_DPCM/MUSIC/: CMakeLists.txt  DMCmusic.dmc  DMCmusic.ftm  DMCmusic.s  DMCmusic.txt  music.s
21_Sprite_Zero/: CMakeLists.txt  chr-rom.s  sprite_zero.c  sprite_zero.chr
21_Sprite_Zero/BG/: Rooms.c
21_Sprite_Zero/MUSIC/: CMakeLists.txt  SoundFx.s
22_XY_Split/: CMakeLists.txt  chr-rom.s  xy_split.c  xy_split.chr
22_XY_Split/.cache/clangd/index/: Room1.c.DE1E8A121194B884.idx  Room2.c.B72896D8B4F2AC3F.idx  Room3.c.D9CDC601A0104295.idx  Room4.c.DEADC3456942B524.idx  Room5.c.10C72BB55C689CF0.idx  Rooms.c.B3F8DD29FFC4C551.idx  Rooms.h.6770D64DA0244300.idx  Sprites.c.124895911A0AB117.idx  Sprites.h.7C80014BEAE64E65.idx  sprite_zero.c.9C51A9E2F0AABE9B.idx
23_Random/: CMakeLists.txt  Random.c  Sprites.c  Sprites.h
24_Mappers/: CMakeLists.txt  apples.chr  balls.chr  chr-rom.s  flower.chr  mappers.c  snake.chr
24_Mappers/NES_ST/: all_bgs.c  all_bgs.h  session.nss
25_Platform5/: CMakeLists.txt  Sprites.c  Sprites.h  chr-rom.s  platformer5.c  platformer5.chr
25_Platform5/BG/: Rooms.c  Rooms.h
25_Platform5/MUSIC/: TestMusic3.s
26_Full_Game/: CMakeLists.txt  Sprites.c  Sprites.h  chr-rom.s  full_game.c  level_data.c  level_data.h  palettes.c  palettes.h
26_Full_Game/BG/: CMakeLists.txt  Levels.h
26_Full_Game/NES_ST/: title.h
28_Zapper/: AlphaZ.chr  CMakeLists.txt  Sprites.c  Sprites.h  Zapper.c  chr-rom.s
28_Zapper/MUSIC/: SFX.ftm  SFX.nsf  SFX.s  music.s
28_Zapper/NES_ST/: CMakeLists.txt  Zap_Test.c  Zap_Test.h  Zap_Test.nss
29_Powerpad/: AlphaP.chr  CMakeLists.txt  PowerTest.c  chr-rom.s
29_Powerpad/NES_ST/: CMakeLists.txt  PowerBG.c  PowerBG.h  PowerBG.nss
32_MMC1/: Alpha.chr  CMakeLists.txt  chr-rom.s  hello_mmc1.c  hello_mmc1.ld
32_MMC1/MUSIC/: TestMusic3.s  music.s
33_MMC3/: CMakeLists.txt  chr-rom.s  hello_mmc3.c
33_MMC3/MUSIC/: music.s
